--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 #mynetwork {
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     border: 1px solid lightgray;
+}
+div.left {
+    position:relative;
+    float:left;
+    width:45%;
+    border: 1px #c7c7c7 solid;
+    height:75%;
+    padding:5px;
+}
+
+div.right {
+    padding-left:10px;
+    float:left;
+    width:50%;
+    height:75%;
 }
